--- a/Index.html
+++ b/Index.html
@@ -70,6 +70,9 @@
       cursor: pointer;
       font-size: 12px;
       text-decoration: none;
+      position: absolute;
+      bottom: 10px;
+      left: 10px;
     }
     .download-button:hover {
       background-color: #218838;
