--- a/Index.html
+++ b/Index.html
@@ -71,8 +71,9 @@
       font-size: 12px;
       text-decoration: none;
       position: absolute;
-      bottom: 10px;
-      left: 10px;
+      bottom: 5%;
+      left: 90%; /* Adjusted position */
+      transform: translateX(-90%);
     }
     .download-button:hover {
       background-color: #218838;
