--- a/Index.html
+++ b/Index.html
@@ -71,9 +71,9 @@
       font-size: 12px;
       text-decoration: none;
       position: absolute;
-      bottom: 5%;
-      left: 90%; /* Adjusted position */
-      transform: translateX(-90%);
+      bottom: 20%; /* 20% vertical shift */
+      right: 100%; /* 100% horizontal shift */
+      transform: translateX(-100%);
     }
     .download-button:hover {
       background-color: #218838;
@@ -102,7 +102,7 @@
       Your browser does not support the video tag.
     </video>
     <div class="download-button-container">
-      <a href="#" class="download-button">Download Video</a>
+      <a href="#" class="download-button">Download</a>
     </div>
   </div>
 
@@ -114,7 +114,7 @@
       Your browser does not support the video tag.
     </video>
     <div class="download-button-container">
-      <a href="#" class="download-button">Download Video</a>
+      <a href="#" class="download-button">Download</a>
     </div>
   </div>
 
@@ -126,7 +126,7 @@
       Your browser does not support the video tag.
     </video>
     <div class="download-button-container">
-      <a href="#" class="download-button">Download Video</a>
+      <a href="#" class="download-button">Download</a>
     </div>
   </div>
 
