--- a/Index.html
+++ b/Index.html
@@ -70,10 +70,6 @@
       cursor: pointer;
       font-size: 12px;
       text-decoration: none;
-      position: absolute;
-      bottom: 20%; /* 20% vertical shift */
-      right: 100%; /* 100% horizontal shift */
-      transform: translateX(-100%);
     }
     .download-button:hover {
       background-color: #218838;
@@ -84,8 +80,7 @@
     .download-button-container {
       position: absolute;
       bottom: 10px;
-      left: 50%;
-      transform: translateX(-50%);
+      left: 0;
       display: flex;
       justify-content: center;
       width: 100%;
