--- a/Index.html
+++ b/Index.html
@@ -37,19 +37,16 @@
       margin-bottom: 20px;
     }
     .buttons-container button {
-      padding: 12px 18px;
+      padding: 8px 12px;
       border: none;
-      border-radius: 6px;
+      border-radius: 5px;
       background-color: #007bff;
       color: white;
-      font-size: 14px;
-      font-weight: bold;
+      font-size: 12px;
       cursor: pointer;
-      transition: background-color 0.3s ease-in-out, transform 0.2s ease-in-out;
     }
     .buttons-container button:hover {
       background-color: #0056b3;
-      transform: scale(1.05);
     }
     .video-title {
       font-size: 18px;
@@ -68,17 +65,14 @@
       text-align: center;
       background-color: #28a745;
       color: white;
-      padding: 8px 16px;
-      border-radius: 6px;
+      padding: 5px 10px;
+      border-radius: 5px;
       cursor: pointer;
-      font-size: 14px;
-      font-weight: bold;
+      font-size: 12px;
       text-decoration: none;
-      transition: background-color 0.3s ease-in-out, transform 0.2s ease-in-out;
     }
     .download-button:hover {
       background-color: #218838;
-      transform: scale(1.05);
     }
     .video-container {
       position: relative;
@@ -86,8 +80,7 @@
     .download-button-container {
       position: absolute;
       bottom: 10px;
-      left: 80%;
-      transform: translateX(-80%);
+      left: 0;
       display: flex;
       justify-content: center;
       width: 100%;
@@ -112,7 +105,7 @@
   <div class="video-container">
     <div class="video-title">Moana 2 - Full</div>
     <video controls>
-      <source src="https://download1589.mediafire.com/0m8jbxyz13dg/seol5d5xcsekh6i/Moana_2_1080P_480P.mp4" type="video/mp4">
+      <source src="https://drive.google.com/file/d/1-0uXp6kXJ76LGnA1Qw89bL_VI23ztGXR/view?usp=drivesdk" type="video/mp4">
       Your browser does not support the video tag.
     </video>
     <div class="download-button-container">
