--- a/Index.html
+++ b/Index.html
@@ -93,7 +93,7 @@
   <div class="video-container">
     <div class="video-title">The Red One - Full</div>
     <video controls>
-      <source src="https://vimeo.com/1042502734" type="video/mp4">
+      <source src="https://drive.google.com/file/d/1-0bRCF7lyH6KYY-F2-jzpXTLWBOClDRe/view?usp=drivesdk" type="video/mp4">
       Your browser does not support the video tag.
     </video>
     <div class="download-button-container">
@@ -117,7 +117,7 @@
   <div class="video-container">
     <div class="video-title">The Paris Under - Full</div>
     <video controls>
-      <source src="https://vimeo.com/1042502734" type="video/mp4">
+      <source src="https://www.mediafire.com/file/qip02ufuv53ybrl/Under.Paris.2024.540p.x265.AAC.%255B9jaRocks.Com%255D.mkv/file" type="video/mp4">
       Your browser does not support the video tag.
     </video>
     <div class="download-button-container">
