--- a/Index.html
+++ b/Index.html
@@ -105,7 +105,7 @@
   <div class="video-container">
     <div class="video-title">Moana 2 - Full</div>
     <video controls>
-      <source src="https://drive.google.com/file/d/1-0uXp6kXJ76LGnA1Qw89bL_VI23ztGXR/view?usp=drivesdk" type="video/mp4">
+      <source src="https://www.mediafire.com/file/seol5d5xcsekh6i/Moana_2_1080P_480P.mp4/file" type="video/mp4">
       Your browser does not support the video tag.
     </video>
     <div class="download-button-container">
@@ -127,7 +127,7 @@
 
   <script>
     // For the first video (The Red One)
-    const redoneVideo = document.getElementById('redoneVideo');
+    const redoneVideo = document.querySelector('video');
     const redoneSegments = [
       'theredone (1).mp4', 'theredone (2).mp4', 'theredone (3).mp4', 'theredone (4).mp4',
       'theredone (5).mp4', 'theredone (6).mp4', 'theredone (7).mp4', 'theredone (8).mp4',
