--- a/Index.html
+++ b/Index.html
@@ -93,7 +93,7 @@
   <div class="video-container">
     <div class="video-title">The Red One - Full</div>
     <video controls>
-      <source src="https://drive.google.com/file/d/1-0bRCF7lyH6KYY-F2-jzpXTLWBOClDRe/view?usp=drivesdk" type="video/mp4">
+      <source src="https://drive.google.com/file/d/1-0bRCF7lyH6KYY-F2-jzpXTLWBOClDRe/view?usp=drivesdk" type="video/mkv">
       Your browser does not support the video tag.
     </video>
     <div class="download-button-container">
@@ -117,7 +117,7 @@
   <div class="video-container">
     <div class="video-title">The Paris Under - Full</div>
     <video controls>
-      <source src="https://www.mediafire.com/file/qip02ufuv53ybrl/Under.Paris.2024.540p.x265.AAC.%255B9jaRocks.Com%255D.mkv/file" type="video/mp4">
+      <source src="https://www.mediafire.com/file/qip02ufuv53ybrl/Under.Paris.2024.540p.x265.AAC.%255B9jaRocks.Com%255D.mkv/file" type="video/mkv">
       Your browser does not support the video tag.
     </video>
     <div class="download-button-container">
@@ -127,7 +127,7 @@
 
   <script>
     // For the first video (The Red One)
-    const redoneVideo = document.querySelector('video');
+    const redoneVideo = document.getElementById('redoneVideo');
     const redoneSegments = [
       'theredone (1).mp4', 'theredone (2).mp4', 'theredone (3).mp4', 'theredone (4).mp4',
       'theredone (5).mp4', 'theredone (6).mp4', 'theredone (7).mp4', 'theredone (8).mp4',
