--- a/Index.html
+++ b/Index.html
@@ -178,3 +178,12 @@
         moanaVideo.src = segment;
         moanaVideo.play();
       });
+    });
+  </script>
+
+  <footer>
+    <p>Website created by <strong>Hyperturret</strong></p>
+  </footer>
+
+</body>
+</html>
