--- a/Index.html
+++ b/Index.html
@@ -105,11 +105,11 @@
   <div class="video-container">
     <div class="video-title">Moana 2 - Full</div>
     <video controls>
-      <source src="https://www.mediafire.com/file/seol5d5xcsekh6i/Moana_2_1080P_480P.mp4/file" type="video/mp4">
+      <source src="https://drive.google.com/file/d/1-0uXp6kXJ76LGnA1Qw89bL_VI23ztGXR/view?usp=drivesdk" type="video/mp4">
       Your browser does not support the video tag.
     </video>
     <div class="download-button-container">
-      <a href="https://www.mediafire.com/file/seol5d5xcsekh6i/Moana_2_1080P_480P.mp4/file" class="download-button">Download</a>
+      <a href="https://drive.google.com/file/d/1-0uXp6kXJ76LGnA1Qw89bL_VI23ztGXR/download" class="download-button">Download</a>
     </div>
   </div>
 
