--- a/Index.html
+++ b/Index.html
@@ -93,7 +93,7 @@
   <div class="video-container">
     <div class="video-title">The Red One - Full</div>
     <video controls>
-      <source src="https://drive.google.com/file/d/1-0bRCF7lyH6KYY-F2-jzpXTLWBOClDRe/view?usp=drivesdk" type="video/mp4">
+      <source src="https://drive.google.com/uc?export=download&id=1-0bRCF7lyH6KYY-F2-jzpXTLWBOClDRe" type="video/mp4">
       Your browser does not support the video tag.
     </video>
     <div class="download-button-container">
