--- a/Index.html
+++ b/Index.html
@@ -93,7 +93,7 @@
   <div class="video-container">
     <div class="video-title">The Red One - Full</div>
     <video controls>
-      <source src="https://drive.google.com/file/d/1-0bRCF7lyH6KYY-F2-jzpXTLWBOClDRe/view?usp=drivesdk" type="video/mp4">
+      <source src="https://vimeo.com/1042502734" type="video/mp4">
       Your browser does not support the video tag.
     </video>
     <div class="download-button-container">
@@ -105,7 +105,7 @@
   <div class="video-container">
     <div class="video-title">Moana 2 - Full</div>
     <video controls>
-      <source src="https://drive.google.com/file/d/1-0uXp6kXJ76LGnA1Qw89bL_VI23ztGXR/view?usp=drivesdk" type="video/mp4">
+      <source src="https://www.dropbox.com/scl/fi/exe006fi0c381qtfsdiby/merge_video_1735487235717.mp4?rlkey=avzpc95ctgq2oty2ftdydf2y6&st=vcqtvbhz&dl=1" type="video/mp4">
       Your browser does not support the video tag.
     </video>
     <div class="download-button-container">
@@ -117,7 +117,7 @@
   <div class="video-container">
     <div class="video-title">The Paris Under - Full</div>
     <video controls>
-      <source src="https://drive.google.com/file/d/1-0WCq1BhNLywA6W2V25oqtNfzRiguJ8W/view?usp=drivesdk" type="video/mp4">
+      <source src="https://vimeo.com/1042502734" type="video/mp4">
       Your browser does not support the video tag.
     </video>
     <div class="download-button-container">
