--- a/Index.html
+++ b/Index.html
@@ -93,7 +93,7 @@
   <div class="video-container">
     <div class="video-title">The Red One - Full</div>
     <video controls>
-      <source src="https://www.dropbox.com/scl/fi/k71y0aonfgw50k7cchu57/merge_video_1735489846834-3.mp4?rlkey=v7yya9y5ayp18yr543wlda17k&st=z3jfkwpr&dl=0" type="video/mp4">
+      <source src="https://vimeo.com/1042502734" type="video/mp4">
       Your browser does not support the video tag.
     </video>
     <div class="download-button-container">
