--- a/Index.html
+++ b/Index.html
@@ -85,6 +85,24 @@
       justify-content: center;
       width: 100%;
     }
+
+    /* New Button Styling */
+    .redirect-button {
+      display: block;
+      margin-top: 20px;
+      text-align: center;
+      background-color: #007bff;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 14px;
+      text-decoration: none;
+    }
+
+    .redirect-button:hover {
+      background-color: #0056b3;
+    }
   </style>
 </head>
 <body>
@@ -124,6 +142,9 @@
       <a href="https://www.mediafire.com/file/qip02ufuv53ybrl/Under.Paris.2024.540p.x265.AAC.%255B9jaRocks.Com%255D.mkv/file" class="download-button">Download</a>
     </div>
   </div>
+
+  <!-- New Button at the bottom -->
+  <a href="newpage.html" class="redirect-button">Go to New Page</a>
 
   <script>
     // For the first video (The Red One)
