--- a/Index.html
+++ b/Index.html
@@ -144,7 +144,7 @@
   </div>
 
   <!-- New Button at the bottom -->
-  <a href="newpage.html" class="redirect-button">Go to New Page</a>
+  <a href="Page2.html" class="redirect-button">Go to Page 2</a>
 
   <script>
     // For the first video (The Red One)
@@ -153,73 +153,22 @@
       'theredone (1).mp4', 'theredone (2).mp4', 'theredone (3).mp4', 'theredone (4).mp4',
       'theredone (5).mp4', 'theredone (6).mp4', 'theredone (7).mp4', 'theredone (8).mp4',
       'theredone (9).mp4', 'theredone (10).mp4', 'theredone (11).mp4', 'theredone (12).mp4',
-      'theredone (13).mp4', 'theredone (14).mp4', 'theredone (15).mp4', 'theredone (16).mp4'
+      'theredone (13).mp4', 'theredone (14).mp4', 'theredone (15).mp4', 'theredone (16).mp4',
+      'theredone (17).mp4', 'theredone (18).mp4', 'theredone (19).mp4', 'theredone (20).mp4'
     ];
+    let currentSegment = 0;
+    redoneVideo.src = redoneSegments[currentSegment];
+    redoneVideo.load();
 
-    const redoneButtonsContainer = document.getElementById('redoneButtons');
-
-    // Create buttons dynamically for The Red One segments
-    redoneSegments.forEach((segment, index) => {
-      const button = document.createElement('button');
-      button.textContent = `Part ${index + 1}`;
-      button.addEventListener('click', () => {
-        redoneVideo.src = segment;
-        redoneVideo.play();
-      });
-      redoneButtonsContainer.appendChild(button);
-    });
-
-    let currentRedoneSegment = 0;
-
-    redoneVideo.addEventListener('ended', () => {
-      currentRedoneSegment++;
-      if (currentRedoneSegment < redoneSegments.length) {
-        redoneVideo.src = redoneSegments[currentRedoneSegment];
+    redoneVideo.addEventListener('ended', function() {
+      currentSegment++;
+      if (currentSegment < redoneSegments.length) {
+        redoneVideo.src = redoneSegments[currentSegment];
+        redoneVideo.load();
         redoneVideo.play();
       }
     });
-
-    // For the second video (Moana)
-    const moanaVideo = document.getElementById('moanaVideo');
-    const moanaSegments = [
-      'Moana(1).mp4', 'Moana(2).mp4', 'Moana(3).mp4', 'Moana(4).mp4',
-      'Moana(5).mp4', 'Moana(6).mp4', 'Moana(7).mp4', 'Moana(8).mp4',
-      'Moana(9).mp4', 'Moana(10).mp4', 'Moana(11).mp4', 'Moana(12).mp4',
-      'Moana(13).mp4', 'Moana(14).mp4', 'Moana(15).mp4', 'Moana(16).mp4',
-      'Moana(17).mp4'
-    ];
-
-    const moanaButtonsContainer = document.getElementById('moanaButtons');
-
-    // Create buttons dynamically for Moana segments
-    moanaSegments.forEach((segment, index) => {
-      const button = document.createElement('button');
-      button.textContent = `Part ${index + 1}`;
-      button.addEventListener('click', () => {
-        moanaVideo.src = segment;
-        moanaVideo.play();
-      });
-      moanaButtonsContainer.appendChild(button);
-    });
-
-    let currentMoanaSegment = 0;
-
-    moanaVideo.addEventListener('ended', () => {
-      currentMoanaSegment++;
-      if (currentMoanaSegment < moanaSegments.length) {
-        moanaVideo.src = moanaSegments[currentMoanaSegment];
-        moanaVideo.play();
-      }
-    });
-
-    // For The Paris Under video
-    const theparisunderVideo = document.getElementById('theparisunderVideo');
   </script>
-
-  <!-- Credit Section -->
-  <footer>
-    <p>Website created by <strong>Hyperturret</strong></p>
-  </footer>
 
 </body>
 </html>
